2010-02-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,proper,common,science}.txt: Add words.

2010-01-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thcoll/cweight.c, src/thcoll/cweight.h, src/thcoll/thcoll.c:
	Remove GPL header left over. The library is LGPL.

2010-01-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/brk-maximal.c (brk_root_pool): Fail if brk_pool_node_new()
	returns NULL.
	* src/brk-maximal.c (brk_maximal_do_impl): Fail if best_brk_new()
	returns NULL.

2010-01-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

2010-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.13 ===

2010-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add 'AC_CONFIG_MACRO_DIR([m4])' for the new libtool.

2010-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thwchar/thwchar.c (th_tis2uni_line, th_uni2tis_line):
	Fix type of 'result' argument to match that in header file, so
	doxygen recognizes and generates doc for it.

2010-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{proper,common}.txt: Add words.

2010-01-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thctype.h, src/thctype/thctype.c: Replace non-portable
	isascii() with most-significant bit check.

2010-01-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{common,geo}.txt: Add words.

2010-01-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thailib.h, src/libthai.c: Move more doc comments.

2010-01-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Move documentation from *.h to *.c, so libthai developers have the doc
	at hand. Users can still read the doxygen-generated doc BTW.

	* include/thai/*.h, src/*/*.c: Move doc comments from *.h to *.c.
	* doc/Doxyfile.in: Set INPUT to @top_srcdir@.
